# qconread2

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
src/: fileinfodialog.cpp  fileinfodialog.hpp  frameinspectorwindow.cpp  frameinspectorwindow.hpp  logtablemodel.cpp  logtablemodel.hpp  logtableview.cpp  logtableview.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  playerplotview.cpp  playerplotview.hpp  playerplotwindow.cpp  playerplotwindow.hpp  settings.hpp
